--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "employee-directory",
+  "homepage": "https://pfotis.github.io/employee-directory",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +11,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "gh-pages": "^3.1.0",
     "material-table": "^1.69.2",
     "mdbreact": "^5.0.2",
     "react": "^17.0.2",
@@ -18,6 +20,8 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
